mobile view for frontpage

--- a/frontend/static/css/instock-tandem.css
+++ b/frontend/static/css/instock-tandem.css
@@ -11,6 +11,12 @@ body {
     color: white;
 }
 
+.main-container {
+    margin-left: 10%;
+    width: 70%;
+    margin-bottom: 200px;
+}
+
 .top-box {
     margin-left: 10%;
     width: 70%;
