--- a/frontend/static/css/student-styles.css
+++ b/frontend/static/css/student-styles.css
@@ -15,6 +15,12 @@ body {
     border-radius: 10px;
 }
 
+.main-container {
+    margin-left: 10%;
+    width: 70%;
+    margin-bottom: 200px;
+}
+
 .top-box {
     margin-left: 10%;
     width: 70%;
