--- a/frontend/static/css/canopies-styles.css
+++ b/frontend/static/css/canopies-styles.css
@@ -15,8 +15,9 @@ body {
 }
 
 .main-container {
-    margin-left: 13%;
+    margin-left: 10%;
     width: 70%;
+    margin-bottom: 200px;
 }
 
 .instock {
