--- a/frontend/templates/instock-sportrigs.html
+++ b/frontend/templates/instock-sportrigs.html
@@ -33,6 +33,7 @@
                             {% if x.po_number %}
                                 <p>{{ x.po_number }}</p>
                             {% endif %}
+                            <button type="button">BUY NOW</button>
                             {% if x.confirmation_r %}
                                 <a class="color-vector" id="color-vector-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
