mobile view for frontpage

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -28,34 +28,52 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="coming-soon-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
                     <div class="dropdown-content">
-                        <a href="/instock-sportrigs/">all</a>
-                        <a href="###">by type</a>
-                        <a href="###">by date</a>
-                        <a href="###">by customer</a>
+                        <a href="###">ALL</a>
+                        <a href="###">Sport Rigs</a>
+                        <a href="###">Tandem</a>
+                        <a href="###">Student</a>
+                        <a href="###">Canopies</a>
+                        <a href="###">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="instock-btn" href="/manager/inventory-instock/">In Stock</a>
                     <div class="dropdown-content">
-                        <a href="####">link1</a>
-                        <a href="###">link2</a>
+                        <a href="###">ALL</a>
+                        <a href="###">Sport Rigs</a>
+                        <a href="###">Tandem</a>
+                        <a href="###">Student</a>
+                        <a href="###">Canopies</a>
+                        <a href="###">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="sold-btn" href="/manager/inventory-sold/">Sold</a>
                     <div class="dropdown-content">
-                        <a href="###">link1</a>
-                        <a href="###">link2</a>
+                        <a href="###">ALL</a>
+                        <a href="###">Sport Rigs</a>
+                        <a href="###">Tandem</a>
+                        <a href="###">Student</a>
+                        <a href="###">Canopies</a>
+                        <a href="###">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="shipping-btn" href="/manager/inventory-shipping/">Shipping</a>
                     <div class="dropdown-content">
-                        <a href="###">llink1</a>
-                        <a href="###">link2</a>
+                        <a href="###">ALL</a>
+                        <a href="###">Sport Rigs</a>
+                        <a href="###">Tandem</a>
+                        <a href="###">Student</a>
+                        <a href="###">Canopies</a>
+                        <a href="###">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="completed-btn" href="/manager/inventory-completed/">Completed Orders</a>
                     <div class="dropdown-content">
-                        <a href="###">stuff1</a>
-                        <a href="###"> stuff2</a>
+                        <a href="###">ALL</a>
+                        <a href="###">Sport Rigs</a>
+                        <a href="###">Tandem</a>
+                        <a href="###">Student</a>
+                        <a href="###">Canopies</a>
+                        <a href="###">Javelins</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/builder">Build Item</a></div>
