--- a/frontend/templates/instock-tandem.html
+++ b/frontend/templates/instock-tandem.html
@@ -53,6 +53,7 @@
                             {% if x.po_number %}
                                 <p>{{ x.po_number }}</p>
                             {% endif %}
+                            <button type="button">BUY NOW</button>
                             {% if x.confirmation_r %}
                                 <a class="color-tandem" id="color-tandem-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
