--- a/frontend/templates/javelin.html
+++ b/frontend/templates/javelin.html
@@ -58,6 +58,7 @@
                             {% if x.po_number %}
                                 <p>{{ x.po_number }}</p>
                             {% endif %}
+                            <button type="button">BUY NOW</button>
                             {% if x.confirmation_r %}
                                 <a class="color-javelin" id="color-javelin-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
