--- a/frontend/templates/student.html
+++ b/frontend/templates/student.html
@@ -49,6 +49,7 @@
                             {% if x.po_number %}
                             {{ x.po_number }}
                             {% endif %}
+                            <button type="button">BUY NOW</button>
                             {% if x.confirmation_r %}
                                 <a class="color-student" id="color-student-a" href="{% static '' %}{{ x.confirmation_r.key }}">SEE CONFIRMATION REPORT</a>
                             {% endif %}
