mobile view for frontpage

--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -63,14 +63,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -99,14 +99,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -135,14 +135,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -171,14 +171,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -207,14 +207,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -243,14 +243,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
@@ -279,14 +279,14 @@
                             {% if stuff %}
                             <span class="" style="color: pink; font-size: 20pt">{{ x.id }}</span>
                             {% endif %}
-                            <p class="color-canopies">{{ x.name }} - </p>
+                            <p class="color-canopies">{{ x.name.name }} - </p>
                             <p class="color-canopies">Serial #{{ x.serial_number }} - </p>
                             {% if x.in_stock %}
                                 <p>IN STOCK NOW - </p>
                             {% else %}
                                 <p>{{ x.due_date }} - </p>
                             {% endif %}
-                            <p class="color-canopies">{{ x.size }}</p>
+                            <p class="color-canopies">{{ x.size.size }}</p>
                             <div class="description">{{ x.description }}</div>
                             <p class="price-canopies">${{ x.price }}</p>
                             {% if x.in_stock %}
