update student container view

--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -22,6 +22,9 @@
                             <img src="{% static '' %}{{ x.picture.key }}" height="140" width="212">
                         </div>
                         <div class="container-right">
+                        {% if request.user.is_admin %}
+                            {{ x.id }}
+                        {% endif %}
                             <p class="color-vector">{{ x.name.name }}</p>
                             <p class="color-vector">Serial #{{ x.serial_number }}</p>
                             {% if x.in_stock %}
