update student container view

--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -22,7 +22,7 @@
                             <img src="{% static '' %}{{ x.picture.key }}" height="140" width="212">
                         </div>
                         <div class="container-right">
-                        {% if request.user.is_admin %}
+                        {% if staff_user %}
                             {{ x.id }}
                         {% endif %}
                             <p class="color-vector">{{ x.name.name }}</p>
