adding page title to nav bar

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -6,7 +6,7 @@
 {% block title %}
     <title>Build a block</title>
 {% endblock %}
-{% block page_title %}}<div><h1>BUILD/UPDATE PAGE</h1></div>{% endblock %}
+{% block page_title %}}<div class="manager-page-title"><h1>BUILD/UPDATE PAGE</h1></div>{% endblock %}
 
 {% block content %}
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
