--- a/frontend/static/css/home-styles.css
+++ b/frontend/static/css/home-styles.css
@@ -14,7 +14,7 @@ body {
 
 .main-container {
     display: grid;
-    grid-template-columns: 42% 100%;
+    grid-template-columns: 1fr 1fr;
     height: 100%;
     background: #242323;
     margin-top: 5px;
