--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -25,7 +25,7 @@
       <a class="admin-nav-link" href="/manager/inventory/">Inventory</a>
       <a class="admin-nav-link" href="/admin/backend/">Admin Backend</a>
       <a class="admin-nav-link" href="/">Website Home</a>
-      <a class="admin-nav-link" href="{% static 'Required Fields.pdf' %}">Instruction Manual</a>
+      <a class="admin-nav-link" target="_blank" href="{% static 'Required Fields.pdf' %}">Instruction Manual</a>
   </div>
     </div>
 
