adding page title to nav bar

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -35,7 +35,6 @@
                     <button id="deletebtn" class="btnchanger" onclick=deleteContainer();uploadFormOff()>Delete Item</button>
                 </div>
                 <div id="sold-update-btn-group" class="none">
-                    <button id="" class="btnchanger" onclick="">Item select</button>
                     <button id="build-create-customer-btn" class="btnchanger" onclick="openNewSoldCustomerDisplay(); closeSoldChangeDiv(); closeSoldChangeDisplay()">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="openSoldCustomerSelect(); closeSoldNewCustomerDiv()">Change to Sold</button>
                     <button id="" class="btnchanger" onclick="closeSoldNewCustomerDiv(); createSoldDateChange()">Update Date Sold</button>
@@ -44,13 +43,12 @@
                 </div>
                 <div id="shipping-update-btn-group" class="none">
                     <button id="build-create-address-btn" class="btnchanger" onclick="">Create New Shipping Address</button>
-                    <button id="" class="btnchanger" onclick="">Item select</button>
-                    <button id="" class="btnchanger" onclick="">Sold Info Select</button>
-                    <button id="" class="btnchanger" onclick="">Customer select</button>
+                    <button id="" class="btnchanger" onclick="">Update Sold</button>
+                    <button id="" class="btnchanger" onclick="">Update Customer</button>
                     <button id="" class="btnchanger" onclick="">Update Shipping Address</button>
-                    <button id="" class="btnchanger" onclick="">Date sold select</button>
-                    <button id="" class="btnchanger" onclick="">Sold infor 1 select</button>
-                    <button id="" class="btnchanger" onclick="">Sold info 2 select</button>
+                    <button id="" class="btnchanger" onclick="">Update Date Sold</button>
+                    <button id="" class="btnchanger" onclick="">Update Shipping Info 1</button>
+                    <button id="" class="btnchanger" onclick="">Update Shipping Info 2</button>
                     <button id="" class="btnchanger">Tracking Number</button>
                 </div>
             </div>
