--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -438,3 +438,13 @@ button {
     display: flex;
 }
 
+.update-sold-change-display, .update-sold-new-customer-display {
+    display: flex;
+    flex-direction: column;
+    background: rgba(0,0,0,.5);
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+    transform: translate(50%);
+}
+
