--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -43,7 +43,7 @@
                 </div>
                 <div id="shipping-update-btn-group" class="none">
                     <button id="build-create-address-btn" class="btnchanger" onclick="">Create New Shipping Address</button>
-                    <button id="" class="btnchanger" onclick="">Update Sold</button>
+                    <button id="build-create-sold-btn" class="btnchanger" onclick="">Update Sold</button>
                     <button id="" class="btnchanger" onclick="">Update Customer</button>
                     <button id="" class="btnchanger" onclick="">Update Shipping Address</button>
                     <button id="" class="btnchanger" onclick="">Update Date Sold</button>
