sold data form updates

--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -468,3 +468,13 @@ button {
     margin: 10px
 }
 
+.update-sold-change-display {
+    display: flex;
+    flex-direction: column;
+    background: rgba(0,0,0,.5);
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 200px;
+}
+
