sold data form updates

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -35,7 +35,7 @@
                     <button id="deletebtn" class="btnchanger" onclick=deleteContainer();uploadFormOff()>Delete Item</button>
                 </div>
                 <div id="sold-update-btn-group" class="none">
-                    <button id="build-create-customer-btn" class="btnchanger" onclick="openNewSoldCustomerDisplay(); closeSoldChangeDiv(); closeSoldChangeDisplay()">Create a New Customer</button>
+                    <button id="build-create-customer-btn" class="btnchanger" onclick="openNewSoldCustomerDisplay(); closeSoldChangeDiv();">Create a New Customer</button>
                     <button id="" class="btnchanger" onclick="openSoldCustomerSelect(); closeSoldNewCustomerDiv()">Change to Sold</button>
                     <button id="" class="btnchanger" onclick="closeSoldNewCustomerDiv(); createSoldDateChange()">Update Date Sold</button>
                     <button id="" class="btnchanger" onclick="createSoldInfoChange(); closeSoldNewCustomerDiv()">Update Info</button>
