sold data form updates

--- a/users/templates/user.html
+++ b/users/templates/user.html
@@ -4,7 +4,7 @@
 <a href="/admin/backend/">Main Admin Page</a>
 <a href="/manager/media/">Media Manager</a>
 <a href="/">Website Home</a>
-<a href="/admin/backend/message/">Contact Requests</a>
+<a href="/manager/contact-requests/">Contact Requests</a>
 <a href="/users/logout/">logout?</a>
 <a href="/manager/inventory/" >Inventory</a>
 <a href="/manager/inventory-sold/" >Sold Inventory</a>
