sold data form updates

--- a/backend/templates/contact-requests.html
+++ b/backend/templates/contact-requests.html
@@ -3,10 +3,11 @@
     <ol><li>
     <ul>
         <li>{{ x.email }}</li>
-        <li>{{ x.email }}</li>
-        <li>{{ x.email }}</li>
-        <li>{{ x.email }}</li>
-        <li>{{ x.email }}</li>
+        <li>{{ x.subject }}</li>
+        <li>{{ x.time }}</li>
+        <li>{{ x.confirmation_number }}</li>
+        <li>{{ x.comment }}</li>
+        <li>{{ x.read }}</li>
     </ul></li></ol>
     {% endfor %}
 
