sold data form updates

--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -23,7 +23,7 @@
       <a class="admin-nav-link" id="media-btn" href="/manager/media/">Media Manager</a>
       <a class="admin-nav-link" id="build-update-btn" href="/manager/builder/">Build/Update Items</a>
       <a class="admin-nav-link" href="/manager/inventory/">Inventory</a>
-      <a class="admin-nav-link" href="/admin/backend/">Admin Backend</a>
+      <a class="admin-nav-link" id="messages-btn" href="/manager/contact-requests/">Contact Requests</a>
       <a class="admin-nav-link" href="/">Website Home</a>
       <a class="admin-nav-link" target="_blank" href="{% static 'Required Fields.pdf' %}">Instruction Manual</a>
   </div>
