--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -37,7 +37,7 @@
                             {% endif %}
                             <div class="description">{{ x.description }}</div>
                             <p class="price-vector">${{ x.price }}</p>
-                            <button class="buy-now-button" type="button">BUY NOW</button>
+                            <button onclick="loadNewUserForm({{ x.id }})" class="buy-now-button" type="button">BUY NOW</button>
                             {% if x.po_number %}
                                 <p>{{ x.po_number }}</p>
                             {% endif %}
@@ -53,8 +53,9 @@
         </div>
 
         <script>
-        document.querySelector('.buy-now-button').addEventListener('click', loadNewUserForm)
-        function loadNewUserForm() {
+
+        function loadNewUserForm(x) {
+            localStorage.setItem('inventoryitem', '${x}')
             window.location.assign('https://vectorrigs.herokuapp.com/users/register/')
         }
         </script>
