Adding customer user pages

--- a/frontend/templates/sportrigs.html
+++ b/frontend/templates/sportrigs.html
@@ -55,7 +55,7 @@
         <script>
 
         function loadNewUserForm(x) {
-            localStorage.setItem('inventoryitem', '${x}')
+            localStorage.setItem('inventoryitem', x.toString())
             window.location.assign('https://vectorrigs.herokuapp.com/users/register/')
         }
         </script>
