Adding customer user pages

--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -6,6 +6,6 @@
 
 <script>
     let item_id = localStorage.getItem('inventoryitem')
-    document.getElementById('change-div').innerHTML = 'Future Purchase ${item_id}'
+    document.getElementById('change-div').innerHTML = 'Future Purchase' + item_id.toString()
 
 </script>
