Adding customer user pages

--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -7,6 +7,6 @@
 
 <script>
     let item_id = localStorage.getItem('inventoryitem')
-    document.getElementById('change-div').innerHTML = 'Future Purchase' + item_id.toString()
+    document.getElementById('change-div').innerHTML = '<h1>Purchase Item - Inventory Item ID: ' + item_id.toString() + '</h1>'
 
 </script>
