Adding customer user pages

--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,6 +1,8 @@
-<div id="new-reg">
+<div id="new-reg" style="display: grid">
+    <form method="post">
     {{ form }}
     <button type="submit">Submit</button>
+    </form>
 </div>
 
 <div id="change-div"></div>
