--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,5 +1,6 @@
 <div id="new-reg" style="display: grid">
     <form method="post">
+        {% csrf_token %}
     {{ form }}
     <button type="submit">Submit</button>
     </form>
